# marty

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  dist-workspace.toml  justfile
.github/instructions/: general.instructions.md
.github/workflows/: global-release.yml  publish-plugins.yml
.marty/: workspace.yml
.marty/tasks/: build.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: graph.rs  list.rs  mod.rs  plan.rs  plugin.rs  run.rs
crates/core/: Cargo.toml  marty.yml
crates/core/src/: configs.rs  execution.rs  lib.rs  platform.rs  plugin_cache.rs  plugin_runtime.rs  plugin_runtime_dylib.rs  results.rs  task_execution.rs  tasks.rs  types.rs  workspace.rs  workspace_manager.rs
crates/core/src/configs/: project.rs  tasks.rs  workspace.rs
crates/core/src/execution/: command.rs  dependencies.rs  runner.rs
crates/plugin_protocol/: CHANGELOG.md  Cargo.toml  README.md  marty.yml
crates/plugin_protocol/src/: dylib.rs  lib.rs  message.rs  traits.rs  types.rs
docs/: DEPENDENCY_GRAPH_VERIFICATION.md  GITHUB_PLUGIN_RESOLUTION_IMPLEMENTATION.md  LICENSE-MIT  MARTY_PLUGIN_IMPLEMENTATION_SUMMARY.md  MARTY_PLUGIN_MIGRATION_GUIDE.md  PLUGIN_CLI_CHANGES_SUMMARY.md  PLUGIN_CONFIGURATION_EXAMPLES.md  PLUGIN_CONFIG_QUICK_REF.md  PLUGIN_DEVELOPER_GUIDE.md  PLUGIN_MONOREPO_APPROACH.md  PLUGIN_NAME_EXTRACTION_IMPLEMENTATION.md  PLUGIN_PROTOCOL_CONSOLIDATION.md  PLUGIN_PROTOCOL_REFACTORING.md  PLUGIN_RESOLUTION.md  PLUGIN_RESOLUTION_STATUS.md  PLUGIN_TYPES.md  PLUGIN_TYPE_EXAMPLES.md  PLUGIN_TYPE_IMPLEMENTATION_SUMMARY.md  README.md  RELEASE.md  TYPESCRIPT_PLUGIN_ARCHITECTURE.md
examples/: typescript-workspace-config.yml  workspace-plugin-config.yml
examples/example_plugin/: Cargo.toml
examples/example_plugin/src/: lib.rs
examples/traverse/l1/: project_config.txt
examples/traverse/l1/l2/: project_config.txt
examples/ts-workspace/: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
examples/ts-workspace/.marty/: workspace.yml
examples/ts-workspace/package-a/: package.json  tsconfig.json
examples/ts-workspace/package-a/src/: index.ts
examples/ts-workspace/package-b/: marty.yml  package.json  tsconfig.json
examples/ts-workspace/package-b/src/: index.ts
plugins/cargo/: Cargo.toml
plugins/cargo/src/: lib.rs  main.rs
plugins/pnpm/: Cargo.toml
plugins/pnpm/src/: lib.rs  main.rs
plugins/typescript/: Cargo.toml  README.md
plugins/typescript/src/: lib.rs  main.rs
scripts/: install-plugin.sh
