[package]
name = "marty_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository = "https://github.com/codyspate/marty"

[dependencies]
marty_core = { path = "../core" }
clap.workspace = true
anyhow.workspace = true
tokio = { version = "1.0", features = ["full"] }
colored = "2.0"
