[package]
name = "marty_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository = "https://github.com/codyspate/marty"
description = "Command-line interface for Marty monorepo management tool"
license = "MIT OR Apache-2.0"


[dependencies]
marty_core = { path = "../core" }
clap.workspace = true
anyhow.workspace = true
tokio = { version = "1.0", features = ["full"] }
colored = "2.0"
reqwest.workspace = true

[[bin]]
name = "marty"
path = "src/main.rs"

[package.metadata.dist]
dist = true
