[package]
name = "marty_core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
petgraph = "0.6"
tokio = { version = "1.0", features = ["full"] }
globset = "0.4"
colored = "2.1"
anyhow.workspace = true
serde_json.workspace = true
toml.workspace = true
marty_plugin_protocol = { path = "../plugin_protocol" }
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasi-common.workspace = true
wasi-cap-std-sync.workspace = true

[dev-dependencies]
tempfile.workspace = true
