[package]
name = "marty_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository = "https://github.com/codyspate/marty"
description = "Core business logic and workspace management for Marty monorepo tool"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
petgraph = "0.6"
tokio = { version = "1.0", features = ["full"] }
globset = "0.4"
colored = "2.1"
anyhow.workspace = true
serde_json.workspace = true
toml.workspace = true
marty_plugin_protocol = { path = "../plugin_protocol" }
reqwest.workspace = true
sha2.workspace = true
libloading = "0.8"
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true
