[package]
name = "marty_plugin_protocol"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
repository = "https://github.com/codyspate/marty"
homepage = "https://github.com/codyspate/marty"
readme = "README.md"
description = "Protocol definitions for Marty workspace provider plugins"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
