[package]
name = "marty-plugin-cargo"
version = "0.2.2"
edition = "2021"
authors = ["Cody Spate <cody@spate.dev>"]

# Independent workspace (not part of main workspace)
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
marty_plugin_protocol = { path = "../../crates/plugin_protocol" }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2"
