[package]
name = "marty-plugin-pnpm"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository = "https://github.com/codyspate/marty"
description = "PNPM workspace provider plugin for Marty"
license = "MIT OR Apache-2.0"


[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
marty_plugin_protocol = { path = "../../crates/plugin_protocol" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_cmd = "2"
