[package]
name = "marty-plugin-typescript"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository = "https://github.com/codyspate/marty"
description = "TypeScript workspace provider plugin for Marty"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
marty_plugin_protocol = { version = "0.2.0", path = "../../crates/plugin_protocol" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_cmd = "2"
