[package]
name = "marty-plugin-typescript"
version = "0.1.0"
edition = "2021"
authors = ["Cody Spate <cody@spate.dev>"]

# Independent workspace (not part of main workspace)
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
marty_plugin_protocol = { path = "../../crates/plugin_protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2"
