[package]
name = "marty-plugin-typescript"
version = "0.2.2"
edition = "2021"
authors = ["Cody Spate <cody@spate.dev>"]

# Independent workspace (not part of main workspace)
[workspace]

[lib]
crate-type = ["cdylib"]
name = "marty_plugin_typescript"

[[bin]]
name = "update_references"
path = "src/bin/update_references.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
marty_plugin_protocol = { path = "../../crates/plugin_protocol" }
pathdiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2"
